--- a/src/pages/templates.astro
+++ b/src/pages/templates.astro
@@ -30,6 +30,7 @@ const templates: Item[] = [
     imageSrc: `${base}templates/covers/todo-cover.png`,
     imageAlt: 'Preview of the To-Do List Template',
     imageOrientation: 'portrait',
+    postUrl: `${base}blog/original-to-do-list-template/`,
   },
   {
     title: 'Research Paper Fill-In Template',
