--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const link = (p: string = '') => `${base}${p}`;
       <HeaderLink href={link('about/')}>About</HeaderLink>
     </div>
     <div class="contact-button">
-      <a href="mailto:smartstuffstays@gmail.com">Contact</a>
+      <a href="mailto:lifeloggerz.official@gmail.com">Contact</a>
     </div>
   </nav>
 
